[package]
name = "wooting-shouting"
version = "0.1.0"
edition = "2021"

links = "hidapi-hidraw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bimap = "0.6.3"
chrono = "0.4.24"
ctrlc = "3.4.0"
env_logger = "0.10.0"
hidapi = { version = "2.3.3", features = [
	"linux-static-hidraw",
], default-features = false }
input-linux = "0.6.0"
lazy_static = "1.4.0"
libc = "0.2.144"

log = "0.4.17"
serde = { version = "1.0.163", features = ["derive"] }
sqlite = "0.31.0"
timer = "0.2.0"
wooting-analog-plugin-dev = "0.7.1"

[build-dependencies]
pkg-config = "0.3.27"
#wooting-analog-wrapper = { git = "https://github.com/WootingKb/wooting-analog-sdk", branch = "develop", features = ["serdes"] }
#wooting-analog-plugin = { path = "../../web/wooting-analog-sdk/wooting-analog-plugin" }
